--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,6 +1,6 @@
 <template name="landing">
   <div class="col-md-8">
-    This is where the graph will go
+    {{> chart}}
   </div>
   <div class="col-md-4">
     <div>
