--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -2,7 +2,7 @@
   <div class="row">
     {{> chart}}
   </div>
-  <div class="col-sm-8 col-md-6">
+  <div class="col-sm-8 col-md-4">
     <h4>Add data to an existing topic</h4>
     <table class="table table-striped">
       <thead>
@@ -18,6 +18,12 @@
         {{/each}}
       </tbody>
     </table>
+  </div>
+  <div class="col-md-4">
+    <h4>
+      Select a date
+    </h4>
+    Current Date: {{currentDate}}
   </div>
   <div class="col-sm-4 pull-right">
     <h4>Add a new topic to track</h4>
