--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -24,8 +24,8 @@
       <h4>
         Select a date
       </h4>
-      <p>Current Date: {{currentDate}}</p>
-      <p>Input a date below. Lots of formats are supported but, 'yyyy-mm-dd' is gauranteed to work.</p>
+      <p>Current Date: <b>{{currentDate}}</b></p>
+      <p>Input a date below. Lots of formats are supported, but 'yyyy-mm-dd' is gauranteed to work.</p>
       <div class="input-group form-search">
         <input type="text" class="form-control search-query" id="dateSelector" placeholder="2013-02-08">
         <span class="input-group-btn">
