Styling and downvote capability

--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -3,13 +3,13 @@
     {{> chart}}
   </div>
   <div class="col-sm-12 col-md-8 well">
+    <h4>Add data to an existing topic</h4>
     <div class="col-sm-8 col-md-6">
-      <h4>Add data to an existing topic</h4>
       <table class="table table-striped">
         <thead>
           <tr>
             <th class="text-center">Worse</th>
-            <th class="text-center">Name</th>
+            <th class="text-center">Topic</th>
             <th class="text-center">Better</th>
           </tr>
         </thead>
@@ -21,9 +21,7 @@
       </table>
     </div>
     <div class="col-md-6">
-      <h4>
-        Select a date
-      </h4>
+      <h4>Select a date</h4>
       <p>Current Date: <b>{{currentDate}}</b></p>
       <p>Input a date below. Lots of formats are supported, but 'yyyy-mm-dd' is gauranteed to work.</p>
       <div class="input-group form-search">
