--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,44 +1,3 @@
 <template name="landing">
-  <div class="row">
-    {{> chart}}
-  </div>
-  <div class="col-sm-12 col-md-8 well">
-    <h4>Add data to an existing topic</h4>
-    <div class="col-sm-8 col-md-6">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th class="text-center">Worse</th>
-            <th class="text-center">Topic</th>
-            <th class="text-center">Better</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each activeTracker}}
-            {{> tracker}}
-          {{/each}}
-        </tbody>
-      </table>
-    </div>
-    <div class="col-md-6">
-      <h4>Select a date</h4>
-      <p>Current Date: <b>{{currentDate}}</b></p>
-      <p>Input a date below. Lots of formats are supported, but 'yyyy-mm-dd' is gauranteed to work.</p>
-      <div class="input-group form-search">
-        <input type="text" class="form-control search-query" id="dateSelector" placeholder="2013-02-08">
-        <span class="input-group-btn">
-          <button type="submit" class="btn btn-success" id="addDate" data-type="last">Add</button>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-4 pull-right">
-    <h4>Add a new topic to track</h4>
-    <div class="input-group form-search">
-      <input type="text" class="form-control search-query" id="newTrackerName" placeholder="Add New Topic">
-      <span class="input-group-btn">
-        <button type="submit" class="btn btn-success" id="newTracker" data-type="last">Add</button>
-      </span>
-    </div>
-  </div>
+  <h1>What are the trends in your life?</h1>
 </template>
