Add pictures to the front page

--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,3 +1,7 @@
 <template name="landing">
-  <h1>What are the trends in your life?</h1>
+  <h1 class="text-center"><small>What are the trends in your life?</small></h1>
+  <div class="well"><img src="happi-demo.png"></div>
+  <div class="col-sm-6 col-sm-offset-3">
+    <button type="submit" class="btn btn-lg btn-primary btn-block" id="tryIt">Try It Out</button>
+  </div>
 </template>
