--- a/client/views/myData.html
+++ b/client/views/myData.html
@@ -22,7 +22,13 @@
     </div>
     <div class="col-md-6">
       <h4>Select a date</h4>
-      <p>Current Date: <b>{{currentDate}}</b></p>
+      <a>
+        <span class="glyphicon glyphicon-chevron-left" title="Move date back 1 day" id="dateBackward"></span>
+      </a>
+      Current Date: <b>{{currentDate}}</b>
+      <a>
+        <span class="glyphicon glyphicon-chevron-right" title="Move date forwards 1 day" id="dateForward"></span>
+      </a>
       <p>Input a date below. Lots of formats are supported, but 'yyyy-mm-dd' is gauranteed to work.</p>
       <div class="input-group form-search">
         <input type="text" class="form-control search-query" id="dateSelector" placeholder="2013-02-08">
